Gallery page image alignmet fix for now

--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,10 @@ body {
 
 .m-top9rem { margin-top: 9rem; }
 
+.m-top-neg-28rem { margin-top: -28.1rem; }
+
+.h-fit { height: 28.1rem; }
+
 .m-bot6rem { margin-bottom: 6rem; }
 
 .m-left22px { margin-left: 22px; }
